src/perl6_curl.h

int perl6_curlopt_ftp_use_pret ();
int perl6_curlopt_rtsp_request ();
int perl6_curlopt_rtsp_session_id ();
int perl6_curlopt_rtsp_stream_uri ();
int perl6_curlopt_rtsp_transport ();
int perl6_curlopt_rtsp_client_cseq ();
int perl6_curlopt_rtsp_server_cseq ();
int perl6_curlopt_interleavedata ();
int perl6_curlopt_interleavefunction ();
int perl6_curlopt_wildcardmatch ();
int perl6_curlopt_chunk_bgn_function ();
int perl6_curlopt_chunk_end_function ();
int perl6_curlopt_fnmatch_function ();
int perl6_curlopt_chunk_data ();
int perl6_curlopt_fnmatch_data ();
int perl6_curlopt_resolve ();
int perl6_curlopt_tlsauth_username ();
int perl6_curlopt_tlsauth_password ();
int perl6_curlopt_tlsauth_type ();
int perl6_curlopt_transfer_encoding ();
int perl6_curlopt_closesocketfunction ();
int perl6_curlopt_closesocketdata ();
int perl6_curlopt_gssapi_delegation ();
int perl6_curlopt_dns_servers ();
int perl6_curlopt_accepttimeout_ms ();
int perl6_curlopt_tcp_keepalive ();
int perl6_curlopt_tcp_keepidle ();
int perl6_curlopt_tcp_keepintvl ();
int perl6_curlopt_ssl_options ();
int perl6_curlopt_mail_auth ();
int perl6_curlopt_lastentry ();