lib/WWW/Curl/Symbols/Options.pm6

sub CURLOPT_FTP_USE_PRET is export { perl6_curlopt_ftp_use_pret }
sub perl6_curlopt_rtsp_request returns int is native('libperl6_curl') { * }
sub CURLOPT_RTSP_REQUEST is export { perl6_curlopt_rtsp_request }
sub perl6_curlopt_rtsp_session_id returns int is native('libperl6_curl') { * }
sub CURLOPT_RTSP_SESSION_ID is export { perl6_curlopt_rtsp_session_id }
sub perl6_curlopt_rtsp_stream_uri returns int is native('libperl6_curl') { * }
sub CURLOPT_RTSP_STREAM_URI is export { perl6_curlopt_rtsp_stream_uri }
sub perl6_curlopt_rtsp_transport returns int is native('libperl6_curl') { * }
sub CURLOPT_RTSP_TRANSPORT is export { perl6_curlopt_rtsp_transport }
sub perl6_curlopt_rtsp_client_cseq returns int is native('libperl6_curl') { * }
sub CURLOPT_RTSP_CLIENT_CSEQ is export { perl6_curlopt_rtsp_client_cseq }
sub perl6_curlopt_rtsp_server_cseq returns int is native('libperl6_curl') { * }
sub CURLOPT_RTSP_SERVER_CSEQ is export { perl6_curlopt_rtsp_server_cseq }
sub perl6_curlopt_interleavedata returns int is native('libperl6_curl') { * }
sub CURLOPT_INTERLEAVEDATA is export { perl6_curlopt_interleavedata }
sub perl6_curlopt_interleavefunction returns int is native('libperl6_curl') { * }
sub CURLOPT_INTERLEAVEFUNCTION is export { perl6_curlopt_interleavefunction }
sub perl6_curlopt_wildcardmatch returns int is native('libperl6_curl') { * }
sub CURLOPT_WILDCARDMATCH is export { perl6_curlopt_wildcardmatch }
sub perl6_curlopt_chunk_bgn_function returns int is native('libperl6_curl') { * }
sub CURLOPT_CHUNK_BGN_FUNCTION is export { perl6_curlopt_chunk_bgn_function }
sub perl6_curlopt_chunk_end_function returns int is native('libperl6_curl') { * }
sub CURLOPT_CHUNK_END_FUNCTION is export { perl6_curlopt_chunk_end_function }
sub perl6_curlopt_fnmatch_function returns int is native('libperl6_curl') { * }
sub CURLOPT_FNMATCH_FUNCTION is export { perl6_curlopt_fnmatch_function }
sub perl6_curlopt_chunk_data returns int is native('libperl6_curl') { * }
sub CURLOPT_CHUNK_DATA is export { perl6_curlopt_chunk_data }
sub perl6_curlopt_fnmatch_data returns int is native('libperl6_curl') { * }
sub CURLOPT_FNMATCH_DATA is export { perl6_curlopt_fnmatch_data }
sub perl6_curlopt_resolve returns int is native('libperl6_curl') { * }
sub CURLOPT_RESOLVE is export { perl6_curlopt_resolve }
sub perl6_curlopt_tlsauth_username returns int is native('libperl6_curl') { * }
sub CURLOPT_TLSAUTH_USERNAME is export { perl6_curlopt_tlsauth_username }
sub perl6_curlopt_tlsauth_password returns int is native('libperl6_curl') { * }
sub CURLOPT_TLSAUTH_PASSWORD is export { perl6_curlopt_tlsauth_password }
sub perl6_curlopt_tlsauth_type returns int is native('libperl6_curl') { * }
sub CURLOPT_TLSAUTH_TYPE is export { perl6_curlopt_tlsauth_type }
sub perl6_curlopt_transfer_encoding returns int is native('libperl6_curl') { * }
sub CURLOPT_TRANSFER_ENCODING is export { perl6_curlopt_transfer_encoding }
sub perl6_curlopt_closesocketfunction returns int is native('libperl6_curl') { * }
sub CURLOPT_CLOSESOCKETFUNCTION is export { perl6_curlopt_closesocketfunction }
sub perl6_curlopt_closesocketdata returns int is native('libperl6_curl') { * }
sub CURLOPT_CLOSESOCKETDATA is export { perl6_curlopt_closesocketdata }
sub perl6_curlopt_gssapi_delegation returns int is native('libperl6_curl') { * }
sub CURLOPT_GSSAPI_DELEGATION is export { perl6_curlopt_gssapi_delegation }
sub perl6_curlopt_dns_servers returns int is native('libperl6_curl') { * }
sub CURLOPT_DNS_SERVERS is export { perl6_curlopt_dns_servers }
sub perl6_curlopt_accepttimeout_ms returns int is native('libperl6_curl') { * }
sub CURLOPT_ACCEPTTIMEOUT_MS is export { perl6_curlopt_accepttimeout_ms }
sub perl6_curlopt_tcp_keepalive returns int is native('libperl6_curl') { * }
sub CURLOPT_TCP_KEEPALIVE is export { perl6_curlopt_tcp_keepalive }
sub perl6_curlopt_tcp_keepidle returns int is native('libperl6_curl') { * }
sub CURLOPT_TCP_KEEPIDLE is export { perl6_curlopt_tcp_keepidle }
sub perl6_curlopt_tcp_keepintvl returns int is native('libperl6_curl') { * }
sub CURLOPT_TCP_KEEPINTVL is export { perl6_curlopt_tcp_keepintvl }
sub perl6_curlopt_ssl_options returns int is native('libperl6_curl') { * }
sub CURLOPT_SSL_OPTIONS is export { perl6_curlopt_ssl_options }
sub perl6_curlopt_mail_auth returns int is native('libperl6_curl') { * }
sub CURLOPT_MAIL_AUTH is export { perl6_curlopt_mail_auth }
sub perl6_curlopt_lastentry returns int is native('libperl6_curl') { * }
sub CURLOPT_LASTENTRY is export { perl6_curlopt_lastentry }
